fixup horizontal grid lines on mobile

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -127,7 +127,6 @@ body {
   position: relative;
   display: grid;
   width: 100%;
-  height: 90vw;
   margin: 0 auto;
   text-align: center;
 }
@@ -152,7 +151,6 @@ body {
 }
 @media (min-width: 480px) {
   .board {
-    height: auto;
     grid-template-rows: auto !important;
   }
 }
@@ -174,13 +172,8 @@ body {
 }
 .square.entry {
   background: white;
-  border-bottom: 0;
+  border-bottom: 1px solid #ddd;
   border-right: 1px solid #ddd;
-}
-@media (min-width: 400px) {
-  .square.entry {
-    border-bottom: 1px solid #ddd;
-  }
 }
 .entry-inner {
   position: absolute;
